--- a/DPA_Musicsheets/Views/LilypondViewerCtrl.xaml
+++ b/DPA_Musicsheets/Views/LilypondViewerCtrl.xaml
@@ -19,15 +19,18 @@
             <Button Command="{Binding RedoCommand }" Content="Redo" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" Width="43"/>
             <Button Command="{Binding SaveAsCommand }" Content="Save as..." Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" Width="60"/>
         </StackPanel>
-        <TextBox TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
+        <TextBox x:Name="Lilypond" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
             VerticalAlignment="Stretch" Text="{Binding LilypondText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="5"
-            Grid.Row="1" Grid.Column="1">
+            Grid.Row="1" Grid.Column="1" TextChanged="Lilypond_TextChanged">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged" >
                     <command:EventToCommand Command="{Binding SelectionChangedCommand}" PassEventArgsToCommand="True"  />
                 </i:EventTrigger>
                 <i:EventTrigger EventName="TextChanged" >
                     <command:EventToCommand Command="{Binding TextChangedCommand}" PassEventArgsToCommand="True"  />
+                </i:EventTrigger>
+                <i:EventTrigger EventName="KeyDown" >
+                    <command:EventToCommand Command="{Binding OnKeyDownCommand}" PassEventArgsToCommand="True"   />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </TextBox>
